config-root/namespaces/jx-production/nodey546/nodey546-nodey546-deploy.yaml
# Source: nodey546/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodey546-nodey546
  labels:
    draft: draft-app
    chart: "nodey546-1.0.8"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-production
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: nodey546-nodey546
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: nodey546-nodey546
    spec:
      serviceAccountName: nodey546-nodey546
      containers:
        - name: nodey546
          image: "gcr.io/jenkins-x-labs-bdd/nodey546:1.0.8"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
