config-root/namespaces/jx-production/nodey546/nodey546-ingress.yaml
# Source: nodey546/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nodey546
  namespace: jx-production
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: nodey546
              servicePort: 80
      host: nodey546-jx-production.34.105.246.143.xip.io
